# shell

./: .gitmodules  BUILD.md  MOBILE_IMPLEMENTATION_STATUS.md  MOBILE_POW_IMPLEMENTATION_PLAN.md  Makefile  PHASE_B5_COMPLETION_SUMMARY.md  PHASE_B_COMPLETION_SUMMARY.md  QUICK_TEST_GUIDE.md  README.md  README_SHELL.md  RandomX_Integration_Plan.md  Shell Implementation Plan.md  TESTING_PLAN.md  Technical Specification for mobile PoW.md  analyze_type_errors.sh  btcd.go  config.go  edits_for_rpcserver.md  fix_all_linter_errors.sh  fix_all_linter_errors_macos.sh  fix_imports.sh  fix_imports_comprehensive.sh  fix_imports_new.sh  fix_imports_properly.sh  fix_missing_types.sh  fix_remaining_issues.sh  fix_remaining_type_issues.sh  fix_specific_errors.sh  fix_syntax_errors.sh  fix_syntax_errors_comprehensive.sh  fix_type_conversions.sh  fix_type_conversions_comprehensive.sh  fix_type_conversions_macos.sh  go.mod  go.sum  log.go  params.go  rpcserver.go  rpcserver_mobile.go  rpcserverhelp.go  (+3 more)
.github/workflows/: randomx-test.yml
addresses/: shell_addresses.go  shell_addresses_test.go
addrmgr/: addrmanager.go  addrmanager_internal_test.go  addrmanager_test.go  export_test.go  knownaddress.go  knownaddress_test.go  network.go  network_test.go
blockchain/: accept.go  bench_test.go  blockindex.go  chain.go  chain_test.go  chainio.go  chainio_test.go  chainview_test.go  checkpoints.go  common_test.go  compress.go  difficulty.go  error.go  example_test.go  fullblocks_test.go  interfaces.go  merkle.go  merkle_test.go  notifications_test.go  process.go  rolling_merkle.go  rolling_merkle_test.go  scriptval.go  scriptval_test.go  shell_state.go  shell_validate.go  thresholdstate.go  thresholdstate_test.go  types.go  upgrade.go  utxocache.go  utxocache_test.go  utxoviewpoint.go  validate.go  validate_test.go  versionbits.go  weight.go
blockchain/fullblocktests/: generate.go  params.go
blockchain/indexers/: addrindex.go  addrindex_test.go  cfindex.go  common.go  manager.go  txindex.go  types.go
blockchain/internal/testhelper/: common.go
blockchain/internal/workmath/: difficulty.go
btcjson/: btcdextcmds_test.go  btcdextresults_test.go  btcwalletextcmds_test.go  chainsvrcmds.go  chainsvrcmds_test.go  chainsvrresults.go  chainsvrresults_test.go  chainsvrwscmds_test.go  chainsvrwsntfns_test.go  chainsvrwsresults_test.go  cmdinfo_test.go  cmdparse_test.go  error_test.go  example_test.go  help_test.go  helpers_test.go  jsonrpc_test.go  mobilecmds.go  register_test.go  walletsvrcmds_test.go  walletsvrresults.go  walletsvrresults_test.go  walletsvrwscmds_test.go  walletsvrwsntfns_test.go
chaincfg/: deployment_time_frame.go  doc.go  genesis.go  params.go  params_test.go  register_test.go
chaincfg/chainhash/: go.mod
connmgr/: seed.go
covenants/vault/: enhanced_vault.go  enhanced_vault_test.go  vault.go
crypto/musig2/: musig2.go  musig2_test.go
database/: driver_test.go  error_test.go  example_test.go  interface.go
database/cmd/dbtool/: fetchblock.go  fetchblockregion.go  globalconfig.go  insecureimport.go  loadheaders.go  main.go
database/ffldb/: bench_test.go  blockio.go  db.go  dbcache.go  driver.go  driver_test.go  export.go  interface_test.go  ldbtreapiter.go  reconcile.go  whitebox_test.go
genesis/: genesis.go
internal/convert/: convert.go
liquidity/: alliance.go  attestor.go  reward.go
mempool/: error.go  estimatefee.go  estimatefee_test.go  fee.go  interface.go  mempool.go  mempool_test.go  mocks.go  policy.go  policy_test.go  types.go
mining/: mining.go  policy.go  policy_test.go
mining/auxpow/: auxpow.go  auxpow_test.go
mining/cpuminer/: cpuminer.go
mining/mobilex/: MILESTONE_A2_COMPLETION.md  arm64.go  config.go  heterogeneous.go  metrics.go  miner.go  npu_detect.go  thermal.go
mining/mobilex/benchmark/: performance_test.go
mining/randomx/: IMPLEMENTATION_STATUS.md  Makefile  README.md  build.sh  config.go  detect.go  miner.go  randomx_bench_test.go  randomx_cgo.go  randomx_stub.go  randomx_test.go  randomx_wrapper.cpp  randomx_wrapper.h  utils.go
mobile/: INTEGRATION_TESTING_COMPLETE.md  README.md
mobile/android/app/src/main/cpp/: CMakeLists.txt  android_power_manager.cpp  android_power_manager.h  android_thermal_manager.cpp  android_thermal_manager.h  arm64_optimizations.cpp  arm64_optimizations.h  mobile_randomx.cpp  mobile_randomx.h  npu_integration.cpp  npu_integration.h  shell_mining_jni.cpp  thermal_verification.cpp  thermal_verification.h
mobile/ios/: README.md
mobile/ios/MiningEngine/: CMakeLists.txt  core_ml_npu_provider.h  ios_mobile_randomx.h  ios_thermal_manager.h  shell_mining_bridge.h  shell_mining_bridge.mm
netsync/: blocklogger.go  interface.go  manager.go
peer/: doc.go  example_test.go  log.go  peer.go  peer_test.go
privacy/confidential/: commitments.go  confidential_test.go  rangeproof.go  transaction.go
rpc/: mobilecmds.go
settlement/channels/: channel.go
settlement/claimable/: claimable.go
settlement/iso20022/: bridge.go
settlement/swaps/: atomic.go
test/: atomic_swap_test.go  document_hash_test.go  iso20022_test.go  phase_b_integration_test.go  settlement_integration_test.go
txscript/: bench_test.go  engine.go  engine_debug_test.go  engine_test.go  example_test.go  hashcache.go  hashcache_test.go  opcode.go  pkscript.go  pkscript_test.go  reference_test.go  script.go  script_test.go  shell_script_parser.go  sigcache.go  sigcache_test.go  sighash.go  sign.go  sign_test.go  sigvalidate.go  standard.go  standard_test.go  taproot.go  taproot_shell.go  taproot_test.go
type_error_analysis/: counts.txt  patterns.txt
wire/: bench_test.go  blockheader.go  common.go  common_test.go  invvect.go  invvect_test.go  message.go  message_test.go  msgblock.go  msgblock_test.go  msgcfcheckpt.go  msgcfheaders.go  msgcfilter.go  msggetblocks.go  msggetblocks_test.go  msggetcfcheckpt.go  msggetcfheaders.go  msggetcfilters.go  msggetdata_test.go  msggetheaders.go  msggetheaders_test.go  msginv_test.go  msgmerkleblock.go  msgmerkleblock_test.go  msgnotfound_test.go  msgreject.go  msgtx.go  msgtx_test.go  protocol.go
(+48 files in other folders)
